--- a/bank.html
+++ b/bank.html
@@ -50,8 +50,11 @@
 
         </section>
     </main>
-    <script src="js/deposit.js"></script>
-    <script src="js/withdraw.js"></script>
+    <!-- <script src="js/deposit.js"></script>
+    <script src="js/withdraw.js"></script> -->
+    <script src="js/utilities.js"></script>
+    <script src="js/againdeposit.js"></script>
+    <script src="js/againwithdraw.js"></script>
 
 </body>
 
